--- a/css/style.css
+++ b/css/style.css
@@ -669,7 +669,7 @@ h1, h2, h3, h4, h5, h6 {
         font-size: 5rem;
     }
 
-    .header p {
+    /* .header p {
         text-align: center;
     }
 
@@ -677,7 +677,7 @@ h1, h2, h3, h4, h5, h6 {
         display: flex;
         justify-content: center;
         align-items: center;
-    }
+    } */
 
     .cards {
         padding: 12rem 0rem;
