--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ h1, h2, h3, h4, h5, h6 {
     height: auto;
     /* height: calc(100vh - var(--bar-height)); */
     padding: 24px;
-    background: var(--color-primary);
+    background: var(--color-black);
     box-sizing: border-box;
 }
 
